crates/sui-prover/tests/snapshots/loop_invariant/base_case_fail.move.snap
---
source: crates/sui-prover/tests/integration.rs
assertion_line: 298
expression: output
---
exiting with verification errors
error: prover::ensures does not hold
   ┌─ tests/inputs/loop_invariant/base_case_fail.move:9:1
   │  
 9 │ ╭ fun loop_inv_0(i: u64, n: u64): bool {
10 │ │     // This invariant is wrong at entry: i starts at 0, but we claim i > 0.
11 │ │     i > 0 && i <= n
12 │ │ }
   │ ╰─^
   · │
17 │       while (i < n) {
   │              - loop invariant does not hold on loop entry
   │  
   =     at tests/inputs/loop_invariant/base_case_fail.move:15: foo_spec
