crates/sui-prover/tests/snapshots/loop_invariant/external.ok.move.snap
---
source: crates/sui-prover/tests/integration.rs
assertion_line: 262
expression: output
---
Verification successful
