crates/sui-prover/tests/snapshots/loop_invariant/external_arg_names.move.snap
---
source: crates/sui-prover/tests/integration.rs
assertion_line: 276
expression: output
---
Verification successful
