crates/sui-prover/tests/snapshots/loop_invariant/external_bool_with_ensures.fail.move.snap
---
source: crates/sui-prover/tests/integration.rs
expression: output
---
exiting with bytecode transformation errors
error: Bool loop invariant functions must not call requires, ensures, or asserts
   ┌─ tests/inputs/loop_invariant/external_bool_with_ensures.fail.move:7:1
   │  
 7 │ ╭ fun loop_inv(i: u64, n: u64): bool {
 8 │ │     ensures(i <= n);
 9 │ │     i <= n
10 │ │ }
   │ ╰─^
