crates/sui-prover/tests/snapshots/loop_invariant/external_inv_aborts.fail.move.snap
---
source: crates/sui-prover/tests/integration.rs
assertion_line: 298
expression: output
---
exiting with bytecode transformation errors
error: Invariant function should not abort
  ┌─ tests/inputs/loop_invariant/external_inv_aborts.fail.move:7:1
  │  
7 │ ╭ fun loop_inv(i: u64, n: u64, s: u128): bool {
8 │ │     i <= n && (s == (i as u128) * ((i as u128) + 1) / 2)
9 │ │ }
  │ ╰─^
