crates/sui-prover/tests/snapshots/loop_invariant/external_invalid_arg_name.move.snap
---
source: crates/sui-prover/tests/integration.rs
assertion_line: 262
expression: output
---
exiting with bytecode transformation errors
error: Loop invariant function loop_invariant_external_invalid_arg_name_fail::loop_inv expects parameter 'compare' which is not found in function loop_invariant_external_invalid_arg_name_fail::test_spec
   ┌─ tests/inputs/loop_invariant/external_invalid_arg_name.move:12:1
   │  
12 │ ╭ fun test_spec(n: u64): u128 {
13 │ │     let mut s: u128 = 0;
14 │ │     let mut i = 0;
15 │ │ 
   · │
22 │ │     s
23 │ │ }
   │ ╰─^
