crates/sui-prover/tests/snapshots/loop_invariant/external_invalid_arg_name_macro.move.snap
---
source: crates/sui-prover/tests/integration.rs
assertion_line: 271
expression: output
---
exiting with bytecode transformation errors
error: Loop invariant function loop_invariant_external_invalid_arg_name_macro_fail::loop_inv expects parameter 'compare' which is not found in function loop_invariant_external_invalid_arg_name_macro_fail::test_spec.
Available variables: ( n: u64, i: u64, res: u128, s: u128 )
   ┌─ tests/inputs/loop_invariant/external_invalid_arg_name_macro.move:23:1
   │  
23 │ ╭ fun test_spec(n: u64): u128 {
24 │ │     let res = test_loop!(n);
25 │ │     ensures(res == (n as u128) * ((n as u128) + 1) / 2);
26 │ │     res
27 │ │ }
   │ ╰─^
