crates/sui-prover/tests/snapshots/loop_invariant/external_mut_ref.fail.move.snap
---
source: crates/sui-prover/tests/integration.rs
assertion_line: 298
expression: output
---
exiting with bytecode transformation errors
error: Mutable references are not allowed in loop invariant functions
  ┌─ tests/inputs/loop_invariant/external_mut_ref.fail.move:7:1
  │  
7 │ ╭ fun loop_inv(i: u64, n: u64, s: &mut u128): bool {
8 │ │     i <= n && (s == (i as u128) * ((i as u128) + 1) / 2)
9 │ │ }
  │ ╰─^
