crates/sui-prover/tests/snapshots/loop_invariant/external_no_target.fail.move.snap
---
source: crates/sui-prover/tests/integration.rs
expression: output
---
exiting with bytecode transformation errors
error: invalid #[ext(spec_only(loop_inv(...)))] on 'loop_invariant_external_no_target_fail::loop_inv': missing required parameter `target`
  ┌─ tests/inputs/loop_invariant/external_no_target.fail.move:6:1
  │  
6 │ ╭ fun loop_inv(i: u64, n: u64, s: u128): bool {
7 │ │     i <= n && (s == (i as u128) * ((i as u128) + 1) / 2)
8 │ │ }
  │ ╰─^
